--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,5 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background: linear-gradient(89deg, rgba(47,57,69,1) 27%, rgba(47,57,69,1) 33%, rgba(47,57,69,1) 43%, rgba(58,80,90,1) 57%, rgba(93,151,155,1) 100%);
 }
