--- a/src/colors.scss
+++ b/src/colors.scss
@@ -4,3 +4,4 @@ $color-light: #e4fc9e;
 $color-secondary-dark: #2d494b;
 $color-quaternary-light: #2b2b2b;
 $color-quaternary-dark: #1a1a1a;
+$color-box-shadow: #1c1c22;
