--- a/src/components/activity-feed/activity-feed.scss
+++ b/src/components/activity-feed/activity-feed.scss
@@ -50,10 +50,10 @@
 	width: 11px;
     padding-left: 10px;
 }
-// .comment-icon:hover,
-// .heart-icon:hover {
-// 	cursor: pointer;
-// }
+.comment-icon:hover,
+.heart-icon:hover {
+	cursor: pointer;
+}
 .af__post-actions {
 	font-size: 12px;
 	text-align: right;
