--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@
   height: 230px;
   background-attachment: fixed;
   background-position: 0 -55px;
+  background-repeat: no-repeat;
   position: absolute;
   top: 0;
   display: flex;
