Notifications page and other updates

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -5,3 +5,4 @@ $color-secondary-dark: #2d494b;
 $color-quaternary-light: #2b2b2b;
 $color-quaternary-dark: #1a1a1a;
 $color-box-shadow: #1c1c22;
+$color-dark: #EDEDED;
